# turbothecat

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
helpers/: Info.plist  turbo-listen.swift
scripts/: build-listener.sh  make-icon.mjs
src/: backend.ts  effects.ts  face.ts  main.ts  md.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  usage.rs
